page animation and add images

--- a/src/index004.html
+++ b/src/index004.html
@@ -13,7 +13,7 @@
   <body >
 
     <div class="smooth-scroll">
-      <!-- <section class="description panel blue">
+      <section class="description panel blue">
         <div><h1>Locomotive Scroll + ScrollTrigger</h1>
           <p>Demonstrates how ScrollTrigger can be used with a smooth scrolling library like Locomotive Scroll, including scrubbing and pinning.</p>
           <div class="scroll-down">Scroll down<div class="arrow"></div></div>
@@ -39,7 +39,7 @@
     
       <section class="panel gray">
         DONE!
-      </section> -->
+      </section>
       
        <section class="description panel blue">
         <div><h1>Locomotive Scroll + ScrollTrigger</h1>
