--- a/src/index.html
+++ b/src/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!DOCTYPE html> 
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
@@ -8,7 +8,7 @@
     <meta content="" name="description" />
     <meta content="" name="keywords" />
     <title><%= htmlWebpackPlugin.options.title %></title>
-    <link rel="icon" src="favicon.ico" />
+    <!-- <link rel="icon" src="favicon.ico" /> -->
   </head>
   <body >
 
@@ -127,12 +127,6 @@
                 </div>
               </div>
             </div>
-            <!-- <div class="bottom-container pos-arrow-abs">
-              <div class="progerss-input">
-                <progress max="100" value="0" class="page-progress"></progress>
-              </div>
-              <a href="#second-fold" class="anchor next-btn"> <i class="arrow right"></i></a>
-            </div> -->
           </section>
           <section id="second-fold" class="uq-section full-screen one-page-second-page pt-5 black-bg positon-rel page-effect" >
             <div class="container">
@@ -141,80 +135,22 @@
                   <img src="<%=require('./img/CAMERA.png')%>" alt="" class="camera-img animate" data-animate="zoomIn" data-duration="0.9s" data-delay="0s" >
                 </div>
                 <div class="text-content">
-                  <h2 class="title animate" data-animate="fadeInLeft" data-duration="0.9s" data-delay="0s" >50% DRAMA + 50% MAGIC </h2>
-                  <p class="animate" data-animate="fadeInLeft" data-duration="0.9s" data-delay="0.5s"><span> Every creator dreams of that one act - one that keeps the audience on the edge of their seats and takes their imagination to where it's never been. Just as an actor on stage entertains and a magician enchants, they strive to put on a show that is just as dramatic as it is magical. With Canon Super R in their hand, they get their prowess and power to perform, amaze and spellbind.</span></p>
-                  <p class="animate" data-animate="fadeInLeft" data-duration="0.9s" data-delay="0.9s"><span> Full HD 180p + 6K 60p RAW, HDR (Moving Objects) + Dual Pixel CMOS AF II  and Up to 40 fps Continuous Shooting + Co-ordinated IS. Super R is your best bet when you want to deliver a masterpiece that has equal amounts of drama and magic and to Make It DRAMAGIC.</span></p>
+                  <h2 class="title animate" data-animate="fadeInUp" data-duration="0.9s" data-delay="0.5s" >50% DRAMA + 50% MAGIC </h2>
+                  <p class="animate" data-animate="fadeInUp" data-duration="0.9s" data-delay="0.5s"><span> Every creator dreams of that one act - one that keeps the audience on the edge of their seats and takes their imagination to where it's never been. Just as an actor on stage entertains and a magician enchants, they strive to put on a show that is just as dramatic as it is magical. With Canon Super R in their hand, they get their prowess and power to perform, amaze and spellbind.</span></p>
+                  <p class="animate" data-animate="fadeInUp" data-duration="0.9s" data-delay="0.5s"><span> Full HD 180p + 6K 60p RAW, HDR (Moving Objects) + Dual Pixel CMOS AF II  and Up to 40 fps Continuous Shooting + Co-ordinated IS. Super R is your best bet when you want to deliver a masterpiece that has equal amounts of drama and magic and to Make It DRAMAGIC.</span></p>
                   <a href="#!"></a>
                 </div>
               </div>
             </div>
-            <!-- <div class="bottom-container pos-arrow-abs">
-              <div class="progerss-input">
-                <progress max="100" value="0" class="page-progress"></progress>
-              </div>
-              <a href="#testPAnnel" class="anchor next-btn"> <i class="arrow right"></i></a>
-            </div> -->
-            <!-- <img class="main-img" src="./img/img-1.jpg" alt="" style="height: 100%; width:100%;" > -->
-            <!-- <div class="container position-abs">
-              <div class="di-flex">
-                <div class="text-center">
-                  <p class="anim2"> <span>  Make it</span> </p>
-                  <div class="text-heading">
-                    <h1 class="anim1">
-                        <span> Dramagic</span>
-                    </h1>
-                  </div>
-                  <div class="border"><span class="spacer"></span>with the<span class="spacer"></span></div>
-                  <div class="text-heading">
-                    <h1 class="anim1">
-                        <span> Dramagic</span>
-                    </h1>
-                  </div>
-                </div>
-                <div class="cammera-img">
-                  <img src="./img/CAMERA.png" alt="">
-                </div>
-              </div>
-            </div> -->
-            <!-- <div class="owl-container">
-              <div id="filmsCarousel" class="owl-carousel owl-theme films-carousel">
-                <div class="item">
-                  <div class="art-card">
-                    <img src="<%= require('./img/img-1.jpg') %>" alt="" style="height: 100%; width:100%;" >
-                  </div>
-                </div>
-                <div class="item">
-                  <div class="art-card">
-                    <img src="<%= require('./img/img-1.jpg') %>"  alt="" style="height: 100%; width:100%;" >
-                  </div>
-                </div>
-                <div class="item">
-                  <div class="art-card">
-                    <img src="<%= require('./img/img-1.jpg') %>"  alt="" style="height: 100%; width:100%;" >
-                  </div>
-                </div>
-                <div class="item">
-                  <div class="art-card">
-                    <img src="<%= require('./img/img-1.jpg') %>"  alt="" style="height: 100%; width:100%;" >
-                  </div>
-                </div>
-              </div>
-            </div> -->
-            <!-- <div class="bottom-container">
-              <div class="progerss-input">
-                <progress max="100"  value="0" class="page-progress"></progress>
-              </div>
-              <a href="#testPAnnel" class="anchor next-btn"> <i class="arrow right"></i></a>
-            </div> -->
           </section>
         </div>
-        <section class="uq-section full-screen pt-5 positon-rel  one-page-third-page" id="testPAnnel">
+        <section class="uq-section full-screen pt-5 positon-rel one-page-third-page" id="testPAnnel">
           <div class="container">
             <div class="di-flex">
-              <h2 class="title animate" data-animate="fadeInUp" data-duration="0.9s" data-delay="0s">Make It <br>
+              <h2 class="title animate" data-animate="fadeInUp" data-duration="0.4s" data-delay="0.5s">Make It <br>
                 DRAMAGIC Film</h2>
-              <p class="animate" data-animate="fadeInLeft" data-duration="0.4s" data-delay="0s"><span>Part a legendary theatre act, part magic show, the Make It DRAMAGIC film   sees one exquisite  scenario after another, each unfolding into the other,  creating a seamless experience that is nothing other than DRAMAGIC. Different worlds across land, water and air come together and merge into one creating a multi-sensory experience that is vivid, vibrant and by all means DRAMAGIC. </span></p>
-              <p class="animate" data-animate="fadeInLeft" data-duration="0.8s" data-delay="0s"><span>Experience it to believe it. Performed with the Super R.</span></p>
+              <p class="animate" data-animate="fadeInUp" data-duration="0.4s" data-delay="0.5s"><span>Part a legendary theatre act, part magic show, the Make It DRAMAGIC film   sees one exquisite  scenario after another, each unfolding into the other,  creating a seamless experience that is nothing other than DRAMAGIC. Different worlds across land, water and air come together and merge into one creating a multi-sensory experience that is vivid, vibrant and by all means DRAMAGIC. </span></p>
+              <p class="animate" data-animate="fadeInUp" data-duration="0.4s" data-delay="0.5s"><span>Experience it to believe it. Performed with the Super R.</span></p>
             </div>
           </div>
           <img src="<%=require('./img/play-btn.png')%>" alt="" class="popup1_open pata-nahi animate" data-animate="zoomIn" data-duration="0.9s" data-delay="0s">
@@ -261,7 +197,7 @@
             <article id="panel-2" class="uq-section panel full-screen one-page-third-page horse-bg">
               <div class="container">
                 <div class="di-flex">
-                  <h2 class="title animate" data-animate="fadeInLeft" data-duration="0.9s" data-delay="0s">50% SPONTANEITY</h2>
+                  <h2 class="title animate" is="titleSecondText" data-animate="fadeInLeft" data-duration="0.9s" data-delay="0s"><span> 50% SPONTANEITY</span></h2>
                   <h2 class="title title-new animate" data-animate="fadeInLeft" data-duration="0.9s" data-delay="0.2s">Full HD 180p + 4K 60p RAW</h2>
                   <p class="animate" data-animate="fadeInLeft" data-duration="0.9s" data-delay="0.4s">Whether it’s a galloping horse or a bullet train speeding towards <br>
                     its destination, capture every single detail that makes the story complete. <br>
@@ -395,6 +331,6 @@
         
       </section>
     </div>
-   
+    
   </body>
 </html>
